--- a/BinaryBytesPhone/build.gradle
+++ b/BinaryBytesPhone/build.gradle
@@ -4,17 +4,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "net.geekstools.numbers"
 
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 29
 
-        versionCode 24
-        versionName "1.000.000.24"
+        versionCode 26
+        versionName "1.000.000.26"
 
         wearAppUnbundled true
     }
@@ -27,11 +27,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
-    implementation 'com.google.firebase:firebase-config:16.5.0'
-    implementation 'com.google.firebase:firebase-ads:17.2.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation 'com.google.firebase:firebase-config:19.0.0'
+    implementation 'com.google.firebase:firebase-ads:18.2.0'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50'
 }
 apply plugin: 'com.google.gms.google-services'
