--- a/BinaryBytesWatch/build.gradle
+++ b/BinaryBytesWatch/build.gradle
@@ -4,17 +4,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "net.geekstools.numbers"
 
         minSdkVersion 25
-        targetSdkVersion 28
+        targetSdkVersion 29
 
-        versionCode 25
-        versionName "1.000.000.25"
+        versionCode 27
+        versionName "1.000.000.27"
     }
     buildTypes {
         release {
@@ -25,15 +25,15 @@ android {
 }
 
 dependencies {
-    compileOnly 'com.google.android.wearable:wearable:2.4.0'
-    implementation 'com.google.android.support:wearable:2.4.0'
+    compileOnly 'com.google.android.wearable:wearable:2.5.0'
+    implementation 'com.google.android.support:wearable:2.5.0'
 
-    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
+    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
 
-    implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
-    implementation 'com.google.firebase:firebase-config:16.5.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation 'com.google.firebase:firebase-config:19.0.0'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50'
 }
 apply plugin: 'com.google.gms.google-services'
