--- a/BinaryBytesWatch/build.gradle
+++ b/BinaryBytesWatch/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
+apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "net.geekstools.numbers"
@@ -13,9 +15,10 @@ android {
         minSdkVersion 25
         targetSdkVersion 29
 
-        versionCode 27
-        versionName "1.000.000.27"
+        versionCode 1001
+        versionName "${versionCode}"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -30,10 +33,11 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-wearable:17.0.0'
 
-    implementation 'com.google.firebase:firebase-core:17.2.0'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
-    implementation 'com.google.firebase:firebase-config:19.0.0'
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50'
+    implementation 'com.google.firebase:firebase-core:17.2.3'
+    implementation 'com.google.firebase:firebase-messaging:20.1.2'
+    implementation 'com.google.firebase:firebase-config:19.1.2'
+
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.70"
 }
-apply plugin: 'com.google.gms.google-services'
