--- a/BinaryBytesPhone/build.gradle
+++ b/BinaryBytesPhone/build.gradle
@@ -37,4 +37,6 @@ dependencies {
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.70"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
