--- a/BinaryBytesPhone/src/main/AndroidManifest.xml
+++ b/BinaryBytesPhone/src/main/AndroidManifest.xml
@@ -6,29 +6,30 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="@string/app_name"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@android:style/Theme.DeviceDefault.Light"
-        android:fullBackupContent="true">
+        android:label="@string/app_name"
+        android:screenOrientation="sensorPortrait"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
         <meta-data
-            tools:node="replace"
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"
+            tools:node="replace" />
         <meta-data
-            tools:node="replace"
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_notification" />
+            android:resource="@drawable/ic_notification"
+            tools:node="replace" />
         <meta-data
-            tools:node="replace"
             android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/default_color" />
+            android:resource="@color/default_color"
+            tools:node="replace" />
         <meta-data
-            tools:replace="android:value"
             android:name="android.support.VERSION"
-            android:value="28.0.0" />
+            android:value="28.0.0"
+            tools:replace="android:value" />
         <meta-data
             android:name="com.google.android.gms.ads.AD_MANAGER_APP"
             android:value="true" />
@@ -38,8 +39,7 @@
 
         <activity
             android:name=".NumbersActivity"
-            android:theme="@style/GeeksEmpire"
-            android:screenOrientation="portrait">
+            android:theme="@style/GeeksEmpire">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
