--- a/BinaryBytesWatch/build.gradle
+++ b/BinaryBytesWatch/build.gradle
@@ -25,6 +25,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -34,10 +43,20 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:17.0.0'
 
 
+    implementation 'androidx.wear:wear:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'androidx.preference:preference-ktx:1.1.0'
+
+
     implementation 'com.google.firebase:firebase-core:17.2.3'
     implementation 'com.google.firebase:firebase-messaging:20.1.2'
     implementation 'com.google.firebase:firebase-config:19.1.2'
 
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.70"
 }
