--- a/BinaryBytesWatch/src/main/AndroidManifest.xml
+++ b/BinaryBytesWatch/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="net.geekstools.numbers">
 
     <uses-feature android:name="android.hardware.type.watch" />
@@ -31,15 +30,10 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/default_color" />
-        <meta-data
-            tools:replace="android:value"
-            android:name="android.support.VERSION"
-            android:value="28.0.0" />
 
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
-            android:noHistory="true"
             android:theme="@style/GeeksEmpire">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +41,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NumbersActivity" />
+
+        <activity
+            android:name=".NumbersActivity"
+            android:label="@string/app_name"
+            android:theme="@style/GeeksEmpire"/>
 
         <service
             android:name=".Util.CloudNotificationHandler"
